<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homePageFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/main"/>
    <item
        android:id="@+id/payingsPageFragment"
        android:icon="@drawable/payments_icon"
        android:title="@string/pays"/>

    <item
        android:id="@+id/servicesPageFragment"
        android:icon="@drawable/light_icon"
        android:title="@string/services"/>

    <item
        android:id="@+id/analysisPageFragment"
        android:icon="@drawable/analysis_icon"
        android:title="@string/analys_view"/>

    <item
        android:id="@+id/morePageFragment"
        android:icon="@drawable/etc_icon"
        android:title="@string/more"/>
</menu>